# hpm-pikapython

middleware/FreeRTOS/Source/include/: mpu_wrappers.h
samples/pikapython/: .gitignore  CMakeLists.txt  main.py  requestment.txt
samples/pikapython/pikascript-lib/hpmicro/: pikahal_pwm.c
samples/pikapython/pikascript-lib/re/: pcre_internal.h
samples/pikapython/src/: FreeRTOSConfig.h  app_main.c  pika_config.c  pika_config.h
soc/HPM6750/: HPM6750_svd.xml
utils/: CMakeLists.txt  hpm_cmp.c  hpm_swap.c
